--- a/instructions/index.html
+++ b/instructions/index.html
@@ -1,22 +1,38 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>Betelehem Gebremicheal</title>
+    <title>MY Portfoli</title>
+    <meta name="description" content="My Resume">
   </head>
   <body>
-    <h1 >About</h1>
-    <p>I am a Civil/ structural Engineering who focuses on design andconstructio </p>
+    <h1 >Betelehem Gebremicheal</h1>
+    <section>
+    <h1>About</h1>
+    <p>I am a Civil/ structural Engineering who focuses on design and constructio </p>
+  </section>
+  <section>
+  <h1>Experience</h1>
     <h2 >J T Hicks Associates LLC North Woodmere NY</h2>
     <p>LIRR Expansion Project: Mid-Day Storage Yard Facility - East Side Access</p>
-    <h3 >T.N.M International consulting company Addis Ababa, Ethiopia </h3>
+    <h2>T.N.M International consulting company Addis Ababa, Ethiopia </h2>
     <p> project : completion Ethiopia Road Authority road construction project</p>
     <p>in collaboration with International consulting firm, Technology Limited</p>
-    <h4 >Wide company Addis Ababa, Ethiopia</h4>
+    <h2>Wide company Addis Ababa, Ethiopia</h2>
     <p> Project : Roads throughout multiple cities of varying lengths and estimated 10 roads per project </p>
-    <h5 >connect</h5>
+    <p>i have Engineering softeware certification</p>
+    <ul>
+      <li>Auto-cad</li>
+      <li>SAP</li>
+      <li>OSHA 30</li>
+    </ul>
+  </section>
+  <section>
+    <h1>Connect</h1>
     <a href="mailto: engbetelehem@yahoo.com">e-mail</a>
     <a href="mailto: arsemye21@gmail.com">e-mail</a>
     <a href="linkedin.com/in/betelehem-gebremicheal-265656157">linkedin</a>
     <a href="https://twitter.com/betelehem126557">twitter</a>
     <a href="https://github.com/zemiarsi">Github</a>
+  </section>
   </body>
 </html>
