--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       <li>quantity Survey / site supervsion at Wide company </li>
     </ul>
   </section>
+  <section id="skills">
+    <h2>skills</h2>
+  <ul></ul>
+</section>
   <section>
     <h1>Connect</h1>
     <ul>
@@ -27,5 +31,9 @@
     <li><a href="https://github.com/zemiarsi">Github</a></li>
   </ul>
   </section>
+  <footer></footer>
+  <script src="js/index.js">
+  </script>
+  
   </body>
 </html>
