<Did Javascript and DOM Assignment>

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>MY Portfoli</title>
     <meta name="description" content="My Portfoli">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <h1 >Betelehem Gebremicheal</h1>
@@ -25,10 +26,10 @@
   <section>
     <h1>Connect</h1>
     <ul>
-   <li><a href="mailto: arsemye21@gmail.com">e-mail</a></li>
-   <li><a href="https://www.linkedin.com/in/betelehem-gebremicheal-265656157/">linkedin</a></li>
-   <li><a href="https://twitter.com/betelehem126557">twitter</a></li> 
-    <li><a href="https://github.com/zemiarsi">Github</a></li>
+   <li><a target="_blank" href="mailto: arsemye21@gmail.com"> <img class="img-size" src="image/gmail.logo.png" alt="Gmail"></a></li>
+   <li><a href="https://www.linkedin.com/in/betelehem-gebremicheal-265656157/"> <img class="img-size" src="image/linkedIn.logo.png" alt="linkedin"></a></li>
+   <li><a href="https://twitter.com/betelehem126557"><img class="img-size" src="image/twitter.logo.png" alt="twitter"></a></li>
+    <li><a href="https://github.com/zemiarsi"> <img class="img-size" src="image/github.logo.png" alt="github"></a></li>
   </ul>
   </section>
   <footer></footer>
