<HTML Form & DoM ass>

--- a/index.html
+++ b/index.html
@@ -32,6 +32,31 @@
     <li><a href="https://github.com/zemiarsi"> <img class="img-size" src="image/github.logo.png" alt="github"></a></li>
   </ul>
   </section>
+
+
+
+  <section>
+    <h2>Leave a Message</h2>
+    <form name="leave_message">
+      <label for="name">Name</label><br>
+      <input type="text" name="name" required><br>
+      <label for="email">Email Address</label><br>
+      <input type="email" name="email" required><br>
+      <label for="message">Message</label><br>
+      <textarea name="message" required></textarea><br>
+      <button type="submit">Submit</button>
+    </form>
+  </section>
+
+   <section id="messages"> 
+     <h2>Messages</h2>
+     <ul>
+
+     </ul>
+    </section>
+
+
+
   <footer></footer>
   <script src="js/index.js">
   </script>
