final changes to portfolio

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ My career is driven by my belief that doing things with love and my clients and 
 <!-- lesson-6-1 -->
 <section id="projects">
   <h2>projects</h2>
-  <ul>
+  <ul class="projects">
   </ul>
 </section>
 
